# realtime-embeded-system-assignment

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.txt  functions.cpp  readme.cpp  wuziqi.cpp
Test/: main.py
include/: ArmController.hpp  GomokuAI.hpp  GomokuVision.hpp  MinimaxAlgorithm.hpp  PCA9685Driver.hpp  Pump.hpp  Servo.hpp
include/app/algorithm/: GomokuAI.hpp
include/app/arm/: ArmController.hpp
include/app/camera/: GomokuVision.hpp
include/app/coordinator/: GomokuCoordinator.hpp
include/driver/: Electromagnet.hpp  PCA9685Driver.hpp  Pump.hpp  Servo.hpp
include/servo/: ServoDriver.hpp
lib/: Servo.cpp
lib/servo/: ServoDriver.cpp
src/: main.cpp
src/app/algorithm/: GomokuAI.cpp  MinimaxAlgorithm.cpp
src/app/arm/: ArmController.cpp
src/app/camera/: ArmCoordinateConverter .cpp  GomokuCam3.cpp  GomokuVision.cpp
src/app/coordinator/: GomokuCoordinator.cpp
src/driver/: Electromagnet.cpp  PCA9685Driver.cpp  Pump.cpp  Servo.cpp
tests/: test_ai.cpp  test_arm.cpp  test_pca9685.cpp  test_servo.cpp
tools/module_tests/: test_pump.py
